Fixed swipe events on mobile menu. 2 js files checked and minimized.

--- a/wp-content/plugins/wp-staff-page/css/style.css
+++ b/wp-content/plugins/wp-staff-page/css/style.css
@@ -22,6 +22,7 @@
     position: relative;
     margin-bottom: 3%;
     max-width: 400px;
+    max-height: 66vh;
 
 }
 
@@ -46,7 +47,7 @@
     top: 0;
     left: 0;
     right: 0;
-
+    text-shadow: 0px 0px 19px rgb(60, 60, 60);
     line-height: 1.4em;
 }
 
@@ -81,7 +82,7 @@
 .block-profile:hover .name-staff{
     box-shadow: 0px 2px 0px white;
     top: -4%;
-    text-shadow: 0px 0px 19px rgb(60, 60, 60);
+
 }
 
 .block-profile:hover .position-staff{
